--- a/lab5/TDDC78_linme560_oskaa489_lab5_report.tex
+++ b/lab5/TDDC78_linme560_oskaa489_lab5_report.tex
@@ -136,7 +136,7 @@ This can be seen in the chart as the pressure for four of the processes grows th
 
 \begin{figure}[!h]
   \caption{Quantitative chart demonstrating load balance.}
-  \label{quantitive}
+  \label{quantitative}
   \includegraphics[width=15cm]{chart_quantitative.png}
 \end{figure}
 
